Updated header styles to fix small alignment issues

--- a/app/static_src/less/partials/header.less
+++ b/app/static_src/less/partials/header.less
@@ -310,11 +310,10 @@
   }
   @media screen and (min-width: 992px) {
     width: 166px;
-    margin-left: 4px;
+    margin-left: 10px;
   }
   @media screen and (min-width: 1024px) {
     width: 184px;
-    margin-left: 10px;
   }
 }
 
